# Burst-Resilient-Feed-Handler-Order-Book-Engine

./: .dockerignore  .gitignore  CMakeLists.txt  DESIGN_NOTES.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
apps/: feed_handler.cpp  live_feed.cpp
benchmarks/: CMakeLists.txt  bench_harness.cpp  microbench.cpp
include/feedhandler/: feed_source.hpp  instrumentation.hpp  itch_file_source.hpp  itch_parser.hpp  market_event.hpp  order_book.hpp  pipeline.hpp  publisher.hpp  sequencer.hpp  spsc_ring_buffer.hpp
include/feedhandler/detail/: byte_read.hpp  cpu.hpp
reports/: benchmark.md
src/: itch_file_source.cpp  itch_parser.cpp  order_book.cpp  pipeline.cpp  publisher.cpp  sequencer.cpp
tests/: CMakeLists.txt  test_instrumentation.cpp  test_order_book.cpp  test_parser.cpp  test_ring_buffer.cpp  test_sequencer.cpp
tools/: itch_gen.cpp
